// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`response encoding void response emits 204 with empty body 1`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

import type { Decoder, ServerOperation } from "@typespex/runtime/server";
import {
  Either,
  createHints,
  emptyHints,
  ResponseEncoders,
  Decoders,
  RequestDecoders,
  Validators,
  decodeRequestInput,
  decodeRequestInputAndBody,
  decodeRequestInputAndMultipartBody,
  decodeJsonBody,
  decodeFormBody,
  decodeMultipartBody,
} from "@typespex/runtime/server";
import * as ServerHints from "./server-hints.js";

const ItemsInput = {
  remove: RequestDecoders.path("itemId", Decoders.string).map((itemId) => ({ itemId })),
};

const ItemsOutput = {
  remove: ResponseEncoders.empty(204),
};

export const ItemsOperations = {
  remove: {
    endpoint: {
      service: { name: "VoidApi", hints: emptyHints() },
      namespaces: [],
      operation: {
        name: "remove",
        operationId: "Items.remove",
        method: "DELETE" as const,
        path: "/items/:itemId",
        hints: emptyHints(),
      },
    },
    decodeInput: (request, pathParams) =>
      decodeRequestInput<{ itemId: string }>(ItemsInput.remove, request, pathParams),
    encodeResult: () => ItemsOutput.remove.encode(undefined),
  } satisfies ServerOperation<{ itemId: string }, void>,
} as const;
"
`;

exports[`response encoding void response emits 204 with empty body 2`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

import type { MatchedRequestContext, OperationHandler } from "@typespex/runtime/server";
export interface ItemsServer<Ctx = MatchedRequestContext> {
  readonly remove: OperationHandler<{ itemId: string }, void, Ctx>;
}

export interface VoidApiServer<Ctx = MatchedRequestContext> {
  readonly Items: ItemsServer<Ctx>;
}
"
`;

exports[`response encoding array response types 1`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

import type { MatchedRequestContext, OperationHandler } from "@typespex/runtime/server";
import type { Tag } from "./models.js";

export interface TagsServer<Ctx = MatchedRequestContext> {
  readonly list: OperationHandler<Record<string, never>, Tag[], Ctx>;
  readonly create: OperationHandler<Tag, Tag, Ctx>;
}

export interface ArrayApiServer<Ctx = MatchedRequestContext> {
  readonly Tags: TagsServer<Ctx>;
}
"
`;

exports[`response encoding array response types 2`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

export interface Tag {
  name: string;
  count: number;
}
"
`;

exports[`response encoding enum and union types in models 1`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

export interface Pet {
  id: string;
  name: string;
  kind: "dog" | "cat" | "bird";
  tag?: string;
}

export interface NotFoundError {
  code: "NOT_FOUND";
  message: string;
}

export type PetKind = "dog" | "cat" | "bird";
"
`;

exports[`response encoding response @header properties become HTTP headers 1`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

import type { Decoder, ServerOperation } from "@typespex/runtime/server";
import {
  Either,
  createHints,
  emptyHints,
  ResponseEncoders,
  Decoders,
  RequestDecoders,
  Validators,
  decodeRequestInput,
  decodeRequestInputAndBody,
  decodeRequestInputAndMultipartBody,
  decodeJsonBody,
  decodeFormBody,
  decodeMultipartBody,
} from "@typespex/runtime/server";
import * as ServerHints from "./server-hints.js";
import type { RateLimitedResponse } from "./models.js";

const DataOutput = {
  fetch: ResponseEncoders.variant<{ rateLimit: number; requestId: string; data: string }>({
    status: 200,
    contentType: "application/json",
    headers: [
      ["rateLimit", "x-rate-limit"],
      ["requestId", "x-request-id"],
    ],
    omit: ["rateLimit", "requestId"],
  }),
};

export const DataOperations = {
  fetch: {
    endpoint: {
      service: { name: "HeadersApi", hints: emptyHints() },
      namespaces: [],
      operation: {
        name: "fetch",
        operationId: "Data.fetch",
        method: "GET" as const,
        path: "/data",
        hints: emptyHints(),
      },
    },
    decodeInput: () => Either.right({} as Record<string, never>),
    encodeResult: (result: { rateLimit: number; requestId: string; data: string }) =>
      DataOutput.fetch.encode(result),
  } satisfies ServerOperation<
    Record<string, never>,
    { rateLimit: number; requestId: string; data: string }
  >,
} as const;
"
`;

exports[`response encoding response @header properties become HTTP headers 2`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

export interface RateLimitedResponse {
  data: string;
}
"
`;

exports[`response encoding text and binary content types use correct encoders 1`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

import type { Decoder, ServerOperation } from "@typespex/runtime/server";
import {
  Either,
  createHints,
  emptyHints,
  ResponseEncoders,
  Decoders,
  RequestDecoders,
  Validators,
  decodeRequestInput,
  decodeRequestInputAndBody,
  decodeRequestInputAndMultipartBody,
  decodeJsonBody,
  decodeFormBody,
  decodeMultipartBody,
} from "@typespex/runtime/server";
import * as ServerHints from "./server-hints.js";

const TextOutput = {
  plain: ResponseEncoders.variant<{ body: string }>({
    status: 200,
    kind: "text",
    contentType: "text/plain",
    body: "body",
    omit: ["contentType", "body"],
  }),
};

export const TextOperations = {
  plain: {
    endpoint: {
      service: { name: "ContentApi", hints: emptyHints() },
      namespaces: [],
      operation: {
        name: "plain",
        operationId: "Text.plain",
        method: "GET" as const,
        path: "/text",
        hints: emptyHints(),
      },
    },
    decodeInput: () => Either.right({} as Record<string, never>),
    encodeResult: (result: { body: string }) => TextOutput.plain.encode(result),
  } satisfies ServerOperation<Record<string, never>, { body: string }>,
} as const;

const BinaryOutput = {
  download: ResponseEncoders.variant<{ body: Uint8Array }>({
    status: 200,
    kind: "bytes",
    contentType: "application/octet-stream",
    body: "body",
    omit: ["contentType", "body"],
  }),
};

export const BinaryOperations = {
  download: {
    endpoint: {
      service: { name: "ContentApi", hints: emptyHints() },
      namespaces: [],
      operation: {
        name: "download",
        operationId: "Binary.download",
        method: "GET" as const,
        path: "/binary",
        hints: emptyHints(),
      },
    },
    decodeInput: () => Either.right({} as Record<string, never>),
    encodeResult: (result: { body: Uint8Array }) => BinaryOutput.download.encode(result),
  } satisfies ServerOperation<Record<string, never>, { body: Uint8Array }>,
} as const;
"
`;

exports[`response encoding multiple error types generate matchVariant result encoders 1`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

import type { Decoder, ServerOperation } from "@typespex/runtime/server";
import {
  Either,
  createHints,
  emptyHints,
  ResponseEncoders,
  Decoders,
  RequestDecoders,
  Validators,
  decodeRequestInput,
  decodeRequestInputAndBody,
  decodeRequestInputAndMultipartBody,
  decodeJsonBody,
  decodeFormBody,
  decodeMultipartBody,
} from "@typespex/runtime/server";
import * as ServerHints from "./server-hints.js";
import type { ConflictError, ForbiddenError, Item, NotFoundError } from "./models.js";

const ItemsInput = {
  read: RequestDecoders.path("itemId", Decoders.string).map((itemId) => ({ itemId })),
  remove: RequestDecoders.path("itemId", Decoders.string).map((itemId) => ({ itemId })),
  updateRequest: RequestDecoders.path("itemId", Decoders.string).map((itemId) => ({ itemId })),
  updateBody: Decoders.object<Item>({
    id: Decoders.string,
    name: Decoders.string,
  }),
};

const ItemsOutput = {
  read: ResponseEncoders.matchVariant<Item | NotFoundError>([
    {
      when: (result): result is Item =>
        typeof result === "object" && result !== null && "id" in result,
      encoder: ResponseEncoders.variant<Item>({ status: 200, contentType: "application/json" }),
    },
    {
      when: (result): result is NotFoundError =>
        typeof result === "object" && result !== null && "code" in result,
      encoder: ResponseEncoders.variant<NotFoundError>({
        status: 404,
        contentType: "application/json",
        omit: ["_"],
      }),
    },
  ]),
  remove: ResponseEncoders.matchVariant<void | NotFoundError | ForbiddenError>([
    {
      when: (result): result is void => result === undefined,
      encoder: ResponseEncoders.variant<void>({ status: 204, kind: "empty" }),
    },
    {
      when: (result): result is NotFoundError =>
        typeof result === "object" &&
        result !== null &&
        "code" in result &&
        result["code"] === "NOT_FOUND",
      encoder: ResponseEncoders.variant<NotFoundError>({
        status: 404,
        contentType: "application/json",
        omit: ["_"],
      }),
    },
    {
      when: (result): result is ForbiddenError =>
        typeof result === "object" &&
        result !== null &&
        "code" in result &&
        result["code"] === "FORBIDDEN",
      encoder: ResponseEncoders.variant<ForbiddenError>({
        status: 403,
        contentType: "application/json",
        omit: ["_"],
      }),
    },
  ]),
  update: ResponseEncoders.matchVariant<Item | NotFoundError | ConflictError>([
    {
      when: (result): result is Item =>
        typeof result === "object" && result !== null && "id" in result,
      encoder: ResponseEncoders.variant<Item>({ status: 200, contentType: "application/json" }),
    },
    {
      when: (result): result is NotFoundError =>
        typeof result === "object" && result !== null && "code" in result,
      encoder: ResponseEncoders.variant<NotFoundError>({
        status: 404,
        contentType: "application/json",
        omit: ["_"],
      }),
    },
    {
      when: (result): result is ConflictError =>
        typeof result === "object" && result !== null && "conflictId" in result,
      encoder: ResponseEncoders.variant<ConflictError>({
        status: 409,
        contentType: "application/json",
        omit: ["_"],
      }),
    },
  ]),
};

export const ItemsOperations = {
  read: {
    endpoint: {
      service: { name: "MultiErrorApi", hints: emptyHints() },
      namespaces: [],
      operation: {
        name: "read",
        operationId: "Items.read",
        method: "GET" as const,
        path: "/items/:itemId",
        hints: emptyHints(),
      },
    },
    decodeInput: (request, pathParams) =>
      decodeRequestInput<{ itemId: string }>(ItemsInput.read, request, pathParams),
    encodeResult: (result: Item | NotFoundError) => ItemsOutput.read.encode(result),
  } satisfies ServerOperation<{ itemId: string }, Item | NotFoundError>,

  remove: {
    endpoint: {
      service: { name: "MultiErrorApi", hints: emptyHints() },
      namespaces: [],
      operation: {
        name: "remove",
        operationId: "Items.remove",
        method: "DELETE" as const,
        path: "/items/:itemId",
        hints: emptyHints(),
      },
    },
    decodeInput: (request, pathParams) =>
      decodeRequestInput<{ itemId: string }>(ItemsInput.remove, request, pathParams),
    encodeResult: (result: void | NotFoundError | ForbiddenError) =>
      ItemsOutput.remove.encode(result),
  } satisfies ServerOperation<{ itemId: string }, void | NotFoundError | ForbiddenError>,

  update: {
    endpoint: {
      service: { name: "MultiErrorApi", hints: emptyHints() },
      namespaces: [],
      operation: {
        name: "update",
        operationId: "Items.update",
        method: "PUT" as const,
        path: "/items/:itemId",
        hints: emptyHints(),
      },
    },
    decodeInput: async (request, pathParams) =>
      decodeRequestInputAndBody<{ itemId: string }, Item>(
        ItemsInput.updateRequest,
        ItemsInput.updateBody,
        request,
        pathParams,
      ),
    encodeResult: (result: Item | NotFoundError | ConflictError) =>
      ItemsOutput.update.encode(result),
  } satisfies ServerOperation<
    { itemId: string; id: string; name: string },
    Item | NotFoundError | ConflictError
  >,
} as const;
"
`;

exports[`response encoding multiple error types generate matchVariant result encoders 2`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

export interface Item {
  id: string;
  name: string;
}

export interface NotFoundError {
  code: "NOT_FOUND";
  message: string;
}

export interface ForbiddenError {
  code: "FORBIDDEN";
  message: string;
}

export interface ConflictError {
  conflictId: string;
  message: string;
}
"
`;

exports[`response encoding multiple success types generate matchVariant result encoders 1`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

import type { Decoder, ServerOperation } from "@typespex/runtime/server";
import {
  Either,
  createHints,
  emptyHints,
  ResponseEncoders,
  Decoders,
  RequestDecoders,
  Validators,
  decodeRequestInput,
  decodeRequestInputAndBody,
  decodeRequestInputAndMultipartBody,
  decodeJsonBody,
  decodeFormBody,
  decodeMultipartBody,
} from "@typespex/runtime/server";
import * as ServerHints from "./server-hints.js";
import type { AcceptedJob, CreatedItem } from "./models.js";

const ItemsOutput = {
  create: ResponseEncoders.matchVariant<CreatedItem | AcceptedJob>([
    {
      when: (result): result is CreatedItem =>
        typeof result === "object" && result !== null && "id" in result,
      encoder: ResponseEncoders.variant<CreatedItem>({
        status: 201,
        contentType: "application/json",
        omit: ["_"],
      }),
    },
    {
      when: (result): result is AcceptedJob =>
        typeof result === "object" && result !== null && "operationId" in result,
      encoder: ResponseEncoders.variant<AcceptedJob>({
        status: 202,
        contentType: "application/json",
        omit: ["_"],
      }),
    },
  ]),
};

export const ItemsOperations = {
  create: {
    endpoint: {
      service: { name: "MultiSuccessApi", hints: emptyHints() },
      namespaces: [],
      operation: {
        name: "create",
        operationId: "Items.create",
        method: "POST" as const,
        path: "/items",
        hints: emptyHints(),
      },
    },
    decodeInput: () => Either.right({} as Record<string, never>),
    encodeResult: (result: CreatedItem | AcceptedJob) => ItemsOutput.create.encode(result),
  } satisfies ServerOperation<Record<string, never>, CreatedItem | AcceptedJob>,
} as const;
"
`;

exports[`response encoding multiple success types generate matchVariant result encoders 2`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

import type { MatchedRequestContext, OperationHandler } from "@typespex/runtime/server";
import type { AcceptedJob, CreatedItem } from "./models.js";

export interface ItemsServer<Ctx = MatchedRequestContext> {
  readonly create: OperationHandler<Record<string, never>, CreatedItem | AcceptedJob, Ctx>;
}

export interface MultiSuccessApiServer<Ctx = MatchedRequestContext> {
  readonly Items: ItemsServer<Ctx>;
}
"
`;

exports[`response encoding discriminator response unions generate readable type guards 1`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

export interface CreateResult {
  kind: string;
}

export interface CreatedItem extends CreateResult {
  kind: "created";
  id: string;
}

export interface AcceptedJob extends CreateResult {
  kind: "accepted";
  operationId: string;
}
"
`;

exports[`response encoding discriminator response unions generate readable type guards 2`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

import type { Decoder, ServerOperation } from "@typespex/runtime/server";
import {
  Either,
  createHints,
  emptyHints,
  ResponseEncoders,
  Decoders,
  RequestDecoders,
  Validators,
  decodeRequestInput,
  decodeRequestInputAndBody,
  decodeRequestInputAndMultipartBody,
  decodeJsonBody,
  decodeFormBody,
  decodeMultipartBody,
} from "@typespex/runtime/server";
import * as ServerHints from "./server-hints.js";
import type { AcceptedJob, CreatedItem } from "./models.js";

const ItemsOutput = {
  create: ResponseEncoders.matchVariant<CreatedItem | AcceptedJob>([
    {
      when: (result): result is CreatedItem =>
        typeof result === "object" &&
        result !== null &&
        "kind" in result &&
        result["kind"] === "created",
      encoder: ResponseEncoders.variant<CreatedItem>({
        status: 201,
        contentType: "application/json",
        omit: ["_"],
      }),
    },
    {
      when: (result): result is AcceptedJob =>
        typeof result === "object" &&
        result !== null &&
        "kind" in result &&
        result["kind"] === "accepted",
      encoder: ResponseEncoders.variant<AcceptedJob>({
        status: 202,
        contentType: "application/json",
        omit: ["_"],
      }),
    },
  ]),
};

export const ItemsOperations = {
  create: {
    endpoint: {
      service: { name: "DiscriminatorApi", hints: emptyHints() },
      namespaces: [],
      operation: {
        name: "create",
        operationId: "Items.create",
        method: "POST" as const,
        path: "/items",
        hints: emptyHints(),
      },
    },
    decodeInput: () => Either.right({} as Record<string, never>),
    encodeResult: (result: CreatedItem | AcceptedJob) => ItemsOutput.create.encode(result),
  } satisfies ServerOperation<Record<string, never>, CreatedItem | AcceptedJob>,
} as const;
"
`;
